--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../components/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
 import About from '../components/sections/About.astro';
+import Overview from '../components/sections/Overview.astro';
 import Experience from '../components/sections/Experience.astro';
 import Certifications from '../components/sections/Certifications.astro';
 import Contact from '../components/sections/Contact.astro';
@@ -10,6 +11,7 @@ import Contact from '../components/sections/Contact.astro';
 <Layout>
   <Hero />
   <About />
+  <Overview />
   <Experience />
   <Certifications />
   <Contact />
