--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -4,7 +4,7 @@ import { siteConfig } from '../../config';
 
 <section
   id="hero"
-  class="section-fade mx-auto flex min-h-screen max-w-5xl flex-col justify-center px-6 py-24 lg:py-36"
+  class="section-fade mx-auto flex min-h-screen max-w-5xl flex-col justify-start px-6 pt-20 pb-16 lg:min-h-[calc(100vh-6rem)] lg:justify-center lg:py-36"
   aria-labelledby="hero-heading"
 >
   <p class="font-mono text-sm text-accent">Hi, my name is {siteConfig.name}</p>
